--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-numpy
-streamlit
-pillow
-pandas
-matplotlib
-ultralytics
---extra-index-url https://download.pytorch.org/whl/cpu
-torch
-torchvision
-opencv-python-headless
-python-dateutil 
+streamlit==1.24.0
+numpy==1.23.5
+Pillow==9.5.0
+pandas==1.5.3
+matplotlib==3.7.1
+opencv-python-headless==4.7.0.72
+python-dateutil==2.8.2
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch==1.13.1+cpu
+torchvision==0.14.1+cpu
+ultralytics==8.0.196 
