--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-streamlit
-numpy
-pillow
-pandas
-matplotlib
-opencv-python-headless
-python-dateutil
---index-url https://download.pytorch.org/whl/cpu
+streamlit>=1.24.0
+numpy>=1.21.0
+pillow>=9.0.0
+pandas>=1.3.0
+matplotlib>=3.4.0
+opencv-python-headless>=4.5.0
+python-dateutil>=2.8.2
 torch>=2.0.0
 torchvision>=0.15.0
-ultralytics 
+ultralytics>=8.0.0 
